--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
              
             </div>
             <div class="hero__bottom-block">
-              <h1  class="title">A fresh approach to <span>shopping</span></h1>
+              <h1  class="title js_main-title"></h1>
+              <p class="title hero-title-span js_sub-title"></p>
               <p class="text"></p>
               <div class="swiper-box">
                 <div class="swiper mySwiper">
